# packet-ipc

./: .gitignore  .travis.yml  Cargo.toml  README.md  release.toml
src/: client.rs  errors.rs  lib.rs  packet.rs  server.rs
tests/: integration_test.rs
