[package]
name = "packet-ipc"
edition = "2018"

# When releasing to crates.io:
# - Update doc URL.
# - Create "vX.Y.Z" git tag.
version = "0.8.0"
license = "MIT"
readme = "README.md"
description = """
Share packets between services using servo ipc
"""
authors = ["Danny Browning <bdbrowning2@gmail.com>"]
categories = ["asynchronous", "network-programming"]
documentation = "https://docs.rs/packet-ipc/"
repository = "https://github.com/dbcfd/packet-ipc"

[dependencies]
bincode = "1"
crossbeam-channel = "0.3"
failure = "0.1"
failure_derive = "0.1"
ipc-channel = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.10"
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.6"
