[package]
name = "packet-ipc"
edition = "2018"

# When releasing to crates.io:
# - Update doc URL.
# - Create "vX.Y.Z" git tag.
version = "0.13.0"
license = "MIT"
readme = "README.md"
description = """
Share packets between services using servo ipc
"""
authors = ["dbcfd <bdbrowning2@gmail.com>"]
categories = ["asynchronous", "network-programming"]
documentation = "https://docs.rs/packet-ipc/"
repository = "https://github.com/protectwise/packet-ipc"

[dependencies]
blocking = "0.5"
bincode = "1"
crossbeam-channel = "0.3"
ipc-channel = "0.14"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1"

[dev-dependencies]
env_logger = "0.7"
tokio-test = "0.2"
